Fix font size for navlinks on mobile

--- a/assets/code.css
+++ b/assets/code.css
@@ -485,7 +485,7 @@ header {
   }
 
   .nav .links a {
-    font-size: .9rem;
+    font-size: .8rem;
   }
 
   .nav .extra a {
